--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Madlibs!</h1>
-    <form>
+    <form action="/story">
         {% for prompt in story.prompts %}
         <label for="{{prompt}}">{{prompt}}:</label>
         <input type="text" name={{prompt}}>
