--- a/templates/results.html
+++ b/templates/results.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Story Results</title>
-</head>
-<body>
-    <h1>Your story:</h1>
-    <p>{{result}}</p>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}<title>>Madlibs - Story Results</title>{% endblock %}
+
+{% block header %}<h1>Your story:</h1>{% endblock %}
+
+{% block content %}<p>{{result}}</p> <a href="/">Return</a>{% endblock %}
