--- a/templates/home.html
+++ b/templates/home.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Madlibs</title>
-</head>
-<body>
-    <h1>Madlibs!</h1>
-    <form action="/story">
-        {% for prompt in story.prompts %}
-        <label for="{{prompt}}">{{prompt}}:</label>
-        <input type="text" name={{prompt}}>
-        <br>
-        {% endfor %}
-        <button>Submit</button>
-    </form>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}<title>>Madlibs</title>{% endblock %}
+
+{% block header %}<h1>Madlibs!</h1>{% endblock %}
+
+{% block content %}
+<form action="/story">
+    {% for prompt in story.prompts %}
+    <label for="{{prompt}}">{{prompt}}:</label>
+    <input type="text" name={{prompt}}>
+    <br>
+    {% endfor %}
+    <button>Submit</button>
+</form>
+{% endblock %}
