madlib template creation

--- a/templates/results.html
+++ b/templates/results.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}<title>>Madlibs - Story Results</title>{% endblock %}
+{% block title %}<title>Madlibs - Story Results</title>{% endblock %}
 
 {% block header %}<h1>Your story:</h1>{% endblock %}
 
