--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %} {% endblock %}</title>
+    <link rel="stylesheet" href="/static/app.css">
+    {% block title %} {% endblock %}
 </head>
 <body>
+    <nav>
+        <a href="/">Home</a>
+        <a href="/create">Create</a>
+    </nav>
+    <div id="content">
     {% block header %}{% endblock %}
     {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
