--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}<title>>Madlibs</title>{% endblock %}
+{% block title %}<title>Madlibs</title>{% endblock %}
 
 {% block header %}<h1>Madlibs!</h1>{% endblock %}
 
